SDK passes all SDK tests